updated the code with proper semantics and fixed css, nav list still not aligned tho

--- a/Code Refactor/02-Homework/Develop/assets/css/style.css
+++ b/Code Refactor/02-Homework/Develop/assets/css/style.css
@@ -8,35 +8,32 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 span {
     color: #d9dcd6;
 }
 
-.header div {
+header nav ul {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-.header div ul {
     list-style-type: none;
 }
 
-.header div ul li {
+li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,7 +47,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -69,13 +66,31 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-#benefits {
+main section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+main section img {
+    max-height: 200px;
+}
+
+main section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,38 +101,20 @@ p {
     background-color: #2589bd;
 }
 
-.benefits2 {
+aside section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefits2 h3 {
+aside section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits2 img {
+aside section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.content2 {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.content2 img {
-    max-height: 200px;
-}
-
-.content2 h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 footer {
